--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ p {
 
 <!-- Question 1 -->
 <div id="question1">
-  <div class="question">📧 وصلك بريد إلكتروني مريب يطلب معلومات تسجيل الدخول، ماذا تفعل؟</div>
+  <div class="question">📧 وصلك بريد إلكتروني يطلب معلومات تسجيل الدخول، ماذا تفعل؟</div>
   <div class="option" onclick="wrongAnswer()">أدخل المعلومات بسرعة</div>
   <div class="option" onclick="nextQuestion('question1','question2')">تحقق من المرسل قبل القيام بأي إجراء</div>
   <div class="option" onclick="wrongAnswer()">تجاهله تمامًا</div>
